# alac

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
codec/: Makefile.am  alac.pc.in
convert-utility/: Makefile.am
